# activity_watcher

activitywatch_client/: __main__.py  cli.py  config.py  install.py  manager.py  run_sync_service.py  security.py  service.py  sync_client.py  test.py
backend/: .env  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 062bf198b680_init.py  6622e70b7477_сделал_device_id_в_таблице_devices_.py  9c2e99ce0968_поправил_ошибку_со_связями.py  b123cd33c20f_init.py  cfd045f56d97_init.py
backend/src/activitywatch/: config.py  loader.py  main.py
backend/src/activitywatch/api/auth/: router.py
backend/src/activitywatch/api/device/: router.py
backend/src/activitywatch/api/statistics/: router.py
backend/src/activitywatch/api/tracker/: router.py
backend/src/activitywatch/core/: security.py
backend/src/activitywatch/database/: db_manager.py  models.py
backend/src/activitywatch/database/cruds/: __init__.py  activity.py  devices.py  statistics.py  sync.py  tokens.py  users.py
backend/src/activitywatch/schemas/auth/: schema.py
backend/src/activitywatch/schemas/devices/: schema.py
backend/src/activitywatch/schemas/tracker/: schema.py
backend/src/activitywatch/services/: auth_service.py
backend/src/activitywatch/test/: aw_manager.py  test_api.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue
frontend/src/api/: auth.js  devices.js
frontend/src/components/: ChartComponent.vue  MatrixChart.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js
frontend/src/styles/: global.css
(+5 files in other folders)
